<resources>
    <string name="fetch_structures_title">Loading failed</string>
    <string name="view_details">View Details</string>
    <string name="choose_action">Choose action</string>
    <string name="select_task_action">Select action to perform</string>
    <string name="undo_task_title">Are you sure you want to clear all data associated with this event?</string>
    <string name="undo_task_msg">You will not be able to recover this data and this task will be marked as incomplete</string>
    <string name="confirm">Confirm</string>
    <string name="filters">Filters (%1$d)</string>
    <string name="structures">Structures</string>
    <string name="record_status">Record\nStatus</string>
    <string name="numero_sign">No.</string>
    <string name="unenumerated_structure">Unenumerated Structure</string>
    <string name="ineligible_location">Ineligible Location</string>
    <string name="return_to_register">Return</string>
    <string name="family_name_format">Family name: %1s</string>
    <string name="village_town_format">Village Town: %1s</string>
    <string name="quarter_clan_format">Quarter/Clan: %1s</string>
    <string name="street_format">Street: %1s</string>
    <string name="landmark_format">Landmark : %1s</string>
    <string name="surname_format">Surname : %1s</string>
    <string name="first_name_format">First Name: %1s</string>
    <string name="middle_name_format">Middle Name: %1s</string>
    <string name="dob_format">Date of Birth(DOB) : %1s</string>
    <string name="case_number_format">Case Number: %1s</string>
    <string name="case_classification_format">Case Classification: %1s</string>
    <string name="focus_reason_format">Focus Reason: %1s</string>
    <string name="focus_status_format">Focus Status: %1s</string>
    <string name="task_reason">Reason: %1s</string>
    <string name="distance_from_structure">%1.0f m away</string>
    <string name="distance_from_center">%1.0f m from %2s center </string>
    <string name="tasks_complete">Tasks Complete</string>
    <string name="view_tasks">View \nTasks</string>
    <string name="not_eligible">Not Eligible</string>
    <string name="narrowing_location_title">Calculating your location</string>
    <string name="narrowing_location_message">Calculating your location. Please wait</string>
    <string name="saving_dialog_title">Saving…</string>
    <string name="fetch_family_failed">Fetch Family Failed</string>
    <string name="failed_to_find_family">Failed to get Family Details</string>
    <string name="house">House</string>
    <string-array name="task_sort_options">
        <item>Distance (nearest first)</item>
        <item>Status</item>
        <item>Type</item>
    </string-array>
    <string name="classification_details">Classification Details</string>
    <string name="index_case_not_found">Index Case details not found</string>
    <string name="opening_form_title">Opening Form</string>
    <string name="opening_form_message">Please wait, Opening form</string>
    <string name="fetching_structures_title">Fetching Structures</string>
    <string name="fetching_structures_message">Fetching Structures for Selected Operational Area and Plan</string>
    <string name="fetching_structure_title">Fetching Structure Details</string>
    <string name="fetching_structure_message">Fetching Structure Details. Please wait</string>
    <string name="fetch_location_and_structures_failed">This operational area has not been defined in the system. Please try to sync your device. Please contact the system administrator if that doesn\'t solve the issue noting the operational area number %1$s.</string>
    <string name="no_structures_found">There are no structures mapped to this operational area. Please add a point to begin</string>
    <string name="wrong_admin_password">Wrong admin password</string>
    <string name="request_password_title">You are not near the structure</string>
    <string name="form_not_found">Form not Found</string>
    <string name="case_classification_data">Case Classification Data</string>
    <string name="family_member_data">Family Member Data</string>
    <string name="family_details">Family Details</string>
    <string name="no_matching_record_found_on_this_device">No matching record found on this device.</string>
    <string name="enter_admin_password"> Input admin password</string>
    <string name="focus_investigation">Focus Investigation</string>
    <string name="detect_case_button">Detect Case</string>
    <string name="sort_by">Sort by</string>
    <string name="status">Status</string>
    <string name="task_type">Task type</string>
    <string name="apply_filters">Apply Filters</string>
    <string name="intervention_unit">Intervention Unit</string>
    <string name="apply_filters_formatter">Apply Filters (%1$d)</string>
    <string name="offline_maps">Offline Maps</string>
    <string name="available">available</string>
    <string name="downloaded">Downloaded</string>
    <string name="localhost_url">http://localhost:%1$d/</string>
    <string name="select_offline_map_to_download">Please select an offline map to download</string>
    <string name="select_offline_map_to_delete">Please select an offline map to delete</string>
    <string name="delete">Delete</string>
    <string name="download_finished_successfuly">Download finished successfuly</string>
    <string name="map_download_progress">Downloading: %,.2f %%</string>
    <string name="found_coverage">Found Coverage</string>
    <string name="spray_coverage">Spray Coverage</string>
    <string name="spray_success_rate">Spray Success Rate</string>
    <string name="offline_map_size">Size %1$s Downloaded %2$s </string>
    <string name="downloading">Downloading</string>
    <string name="task_icon">Task Icon</string>
    <string name="hamburger_menu">Hamburger menu</string>
    <string name="menu">Menu</string>
    <string name="map">Map</string>
    <string name="download">Download</string>
    <string name="clear">Clear</string>
    <string name="list">List</string>
    <string name="powered_by">Powered by</string>
    <string name="select_campaign_operational_area_title">Plan and Operational area not set</string>
    <string name="select_campaign_operational_area">Plan and Operational area not set. Select from the hamburger menu</string>
    <string name="revoked_plan_operational_area">Previously selected Plan and/or Operational area revoked. Select from the hamburger menu</string>
    <string name="reveal_datasource_name" translatable="false">reveal-data-set</string>
    <string name="reveal_layer_polygons" translatable="false">reveal-data-polygons</string>
    <string name="reveal_layer_points" translatable="false">reveal-data-points</string>
    <string name="base_map_feature_json" translatable="false">base_map_feature.json</string>
    <string name="reveal_satellite_style" translatable="false">asset://reveal-streets-satellite.json</string>
    <string name="reveal_offline_map_download_style" translatable="false">map-download-style.json</string>
    <string name="saving_title">Saving</string>
    <string name="saving_message">Saving form in Progress. Please wait</string>
    <string name="location_services_disabled">Location Services Disabled</string>
    <string name="location_services_disabled_spray">You have declined enabling location services to get your current location. You shall have to enter admin password to spray the structure</string>
    <string name="location_services_disabled_add">You have declined enabling location services to get your current location. You shall have to enter admin password to add the structure</string>
    <string name="mark_location_inactive">Mark Location Inactive</string>
    <string name="confirm_mark_location_inactive">Please confirm that this location should be marked inactive</string>
    <string name="progressBarLabel">Syncing %s : %d%% </string>
    <string name="device_data_synced">Device data synced</string>
    <string name="device_data_not_synced">Device data not synced</string>
    <string name="manifest_version_parenthesis_placeholder">(%1$s)</string>
    <string name="selected_datasource_name" translatable="false">select-data</string>
    <string name="structure_not_found_or_visited_during_campaign">Structure not found or visited during campaign</string>
    <string name="other">Other</string>
    <string name="synced_events">Synced events:</string>
    <string name="unsynced_events">Unsynced events:</string>
    <string name="synced_clients">Synced clients:</string>
    <string name="unsynced_clients">Unsynced clients:</string>
    <string name="validated_events">Validated events:</string>
    <string name="validated_clients">Validated clients:</string>
    <string name="task_unprocessed_events">Task unprocessed events:</string>
    <string name="operational_area_not_selected">Operational Area not selected</string>
    <string name="plan_not_selected">Plan not selected</string>
    <string name="sync">Sync</string>
    <string name="campaign">Plan</string>
    <string name="operational_area">Operational Area</string>
    <string name="language_s">Language: %s</string>
    <string name="cannot_make_structure_inactive">You can not make this structure inactive because tasks are completed against it</string>
    <string name="mark_location_ineligible">Mark Location Ineligible</string>
    <string name="is_structure_eligible_for_fam_reg">Is this location eligible to register a family?</string>
    <string name="eligible">Eligible</string>
    <string name="not_eligible_unoccupied">Not Eligible: Currently Unoccupied</string>
    <string name="not_eligible_other">Not Eligible: Other</string>
    <string name="add_structure">Register Structure</string>
    <string name="filter">Filter</string>
    <string name="events">Events</string>
    <string name="locations">Locations</string>
    <string name="plans">Plans</string>
    <string name="tasks_text">Tasks</string>
    <string name="register_family">Register Family</string>
    <string name="district">District:</string>
    <string name="facility">Location:</string>
    <string name="canton">Canton:</string>
    <string name="operator">User:</string>
    <string name="last_edited">Edited %1s</string>
    <string name="device_to_device_sync">P2P Sync</string>
    <string name="summary_forms">Other Forms</string>
    <string name="filled_forms">Filled Forms</string>
    <string name="tasking_app_version">Version %1$s</string>
    <string name="error_fetching_location_hierarchy_title">Error Processing Locations Hierarchy</string>
    <string name="error_fetching_location_hierarchy">Error Processing Location Hierarchy. Log off to download location hierarchy again</string>
    <string name="resetting_task_title">Resetting Task Information</string>
    <string name="resetting_task_msg">Resetting Task Information. Please wait</string>
    <string name="form_save_failure_title">Error Saving Form</string>
    <string name="spray_form_save_failure">Error saving spray form</string>
    <string name="add_structure_form_save_failure">Error saving add structure form</string>
    <string name="error_occurred_saving_form">Error Occurred Saving form</string>
    <string name="plans_download_on_progress_title">Download in Progress</string>
    <string name="plans_download_on_progress">Downloading of Plans In Progress. Please wait</string>
    <string name="zoom_in_to_select">Zoom in to select a structure</string>
    <string name="add_structure_form_redirecting">Redirecting you to operational area (%1$s) so you can collect information against this point.</string>
    <string name="reseting_task_title">Resetting Task Information</string>
    <string name="reseting_task_msg">Resetting Task Information. Please wait</string>
    <string name="archive_member">Archive Member</string>
    <string name="confirm_archive_member">Are you sure you want archive family member? All tasks and events will be archived </string>
</resources>