<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:theme="@style/AppTheme.Nav.ThemeOverlay">

    <ImageView
        android:id="@+id/tasking_icon"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginStart="@dimen/drawer_margin"
        android:layout_marginTop="@dimen/drawer_icon_margin"
        android:scaleType="fitStart"
        android:src="@drawable/login_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="logo" />

    <TextView
        android:id="@+id/application_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/drawer_margin"
        android:layout_marginTop="10dp"
        android:textColor="@color/text_gray"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tasking_icon" />

    <TextView
        android:id="@+id/application_updated"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/drawer_margin"
        android:textColor="@color/text_gray"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/application_version" />


    <TextView
        android:id="@+id/sync_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/drawer_margin"
        android:layout_marginTop="@dimen/drawer_margin_vertical"
        android:text="@string/sync"
        android:textColor="@color/button_blue"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/application_updated" />

    <TextView
        android:id="@+id/sync_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/drawer_second_margin"
        android:layout_marginTop="@dimen/drawer_margin_vertical"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/application_updated" />

    <TextView
        android:id="@+id/sync_progress_bar_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/drawer_margin_vertical"
        android:layout_marginStart="@dimen/drawer_margin"
        android:textColor="@color/text_gray"
        android:visibility="invisible"
        android:textSize="10sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/sync_progress_bar" />

    <ProgressBar
        android:id="@+id/sync_progress_bar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_margin="20dp"
        android:layout_height="wrap_content"
        android:indeterminate="false"
        android:layout_marginStart="@dimen/drawer_margin"
        android:layout_marginTop="@dimen/drawer_margin_vertical"
        android:visibility="invisible"
        android:max="100"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/application_updated"
        />

    <TextView
        android:id="@+id/btn_navMenu_p2pSyncBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/drawer_margin"
        android:layout_marginTop="@dimen/drawer_margin_vertical"
        android:text="@string/device_to_device_sync"
        android:textColor="@color/button_blue"
        android:textSize="18sp"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sync_button" />

    <TextView
        android:id="@+id/btn_navMenu_summaryForms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/drawer_margin"
        android:layout_marginTop="@dimen/drawer_margin_vertical"
        android:text="@string/summary_forms"
        android:textColor="@color/button_blue"
        android:textSize="18sp"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_navMenu_p2pSyncBtn" />


    <TextView
        android:id="@+id/btn_navMenu_filled_forms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/drawer_margin"
        android:layout_marginTop="@dimen/drawer_margin_vertical"
        android:text="@string/filled_forms"
        android:textColor="@color/button_blue"
        android:textSize="18sp"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_navMenu_summaryForms" />

    <TextView
        android:id="@+id/btn_navMenu_offline_maps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/drawer_margin"
        android:layout_marginTop="@dimen/drawer_margin_vertical"
        android:text="@string/offline_maps"
        android:textColor="@color/button_blue"
        android:textSize="18sp"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_navMenu_filled_forms" />


    <View
        android:id="@+id/header_separator"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/drawer_margin_vertical"
        android:layout_marginBottom="@dimen/drawer_separator_margin"
        android:background="#DEDEDE"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_navMenu_offline_maps" />



    <TextView
        android:id="@+id/operational_area_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/drawer_margin"
        android:layout_marginTop="@dimen/drawer_separator_margin"
        android:text="@string/operational_area"
        android:textColor="@color/text_gray"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header_separator"

        />


    <TextView
        android:id="@+id/operational_area_selector"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/drawer_margin"
        android:layout_marginTop="@dimen/drawer_margin_vertical"
        android:layout_marginEnd="@dimen/drawer_margin"
        android:background="@drawable/nav_border_bg"
        android:drawableEnd="@drawable/ic_keyboard_arrow_down_small"
        android:drawablePadding="@dimen/drawer_drawable_padding"
        android:gravity="center_vertical"
        android:padding="10dp"
        android:textColor="@color/text_black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/operational_area_label" />

    <TextView
        android:id="@+id/plan_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/drawer_margin"
        android:layout_marginTop="@dimen/drawer_separator_margin"
        android:text="@string/campaign"
        android:textColor="@color/text_gray"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/operational_area_selector"/>


    <TextView
        android:id="@+id/plan_selector"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/drawer_margin"
        android:layout_marginTop="@dimen/drawer_margin_vertical"
        android:layout_marginEnd="@dimen/drawer_margin"
        android:background="@drawable/nav_border_bg"
        android:drawableEnd="@drawable/ic_keyboard_arrow_down_small"
        android:drawablePadding="@dimen/drawer_drawable_padding"
        android:gravity="center_vertical"
        android:padding="10dp"
        android:textColor="@color/text_black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/plan_label" />


    <TextView
        android:id="@+id/district_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/drawer_margin"
        android:layout_marginTop="@dimen/drawer_separator_margin"
        android:text="@string/district"
        android:textColor="@color/text_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/plan_selector" />


    <TextView
        android:id="@+id/facility_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/drawer_margin"
        android:layout_marginTop="@dimen/drawer_margin_vertical"
        android:text="@string/facility"
        android:textColor="@color/text_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/district_label" />

</androidx.constraintlayout.widget.ConstraintLayout>